Addded prettier config options inside package.json file

--- a/package.json
+++ b/package.json
@@ -45,5 +45,11 @@
     "babel-preset-expo": "~8.0.0",
     "jest-expo": "~36.0.1"
   },
+  "prettier": {
+    "trailingComma": "none",
+    "singleQuote": false,
+    "printWidth": 80,
+    "tabWidth": 2
+  },
   "private": true
 }
