--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "react-navigation-tabs": "~2.6.2",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "sequelize": "^5.21.3",
     "socket.io": "^2.3.0"
   },
