--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@expo/samples": "~36.0.0",
     "@expo/vector-icons": "~10.0.0",
+    "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
@@ -31,7 +32,9 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.0",
@@ -43,9 +46,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.21.3",
-    "socket.io": "^2.3.0",
-    "react-native-safe-area-context": "0.6.0",
-    "@react-native-community/masked-view": "0.1.5"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
