--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "axios": "^0.19.2",
+    "crypto": "^1.0.1",
     "expo": "~36.0.0",
     "expo-asset": "~8.0.0",
     "expo-constants": "~8.0.0",
