--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll",
-    "seed": "node server/db/seed.js"
+    "seed": "node server/db/seed.js",
+    "server": "node server"
   },
   "jest": {
     "preset": "jest-expo"
